crates/icydb-core/tests/ui/query/plan_module_private.stderr
error[E0603]: module `query` is private
 --> tests/ui/query/plan_module_private.rs:1:21
  |
1 | use icydb_core::db::query::plan::PlanError;
  |                     ^^^^^        --------- enum `PlanError` is not publicly re-exported
  |                     |
  |                     private module
  |
note: the module `query` is defined here
 --> src/db/mod.rs
  |
  | pub(crate) mod query;
  | ^^^^^^^^^^^^^^^^^^^^
